fixes for the day