@@ -2,7 +2,7 @@
 
 	
 	<property name="Project" value="PluginTest" />
-
+	<property name="XMLFiles" value="fileMapperXML" />
 	<!-- ========== Executable Targets ======================================== -->
 	<property name="Name" value="PluginTest" />
 	<import file="../../edu.harvard.i2b2.common/common_build.xml" />
@@ -21,7 +21,38 @@
 		</taskdef>
 
 	</target>
-
+	
+	<!-- =================================================================== -->
+		<!-- 							 GENERATION 				 -->
+		<!-- =================================================================== -->
+		
+	<target name="jaxb_gen" depends="gensrcInit">
+				 <java dir="." jar="../edu.harvard.i2b2.common/lib/jaxb/jaxb-xjc.jar" fork="true" failonerror="true" >
+				     <arg line="-quiet -nv -extension ${XMLFiles}/xsd/fileMapper_DataTypes.xsd 
+				     	../${i2b2xmlproject}/xsd/cell/ont_1.1/ONT_QRY.xsd 
+				     	../${i2b2xmlproject}/xsd/cell/crc/psm_1.1/CRC_PSM_QRY.xsd 
+				     	../${i2b2xmlproject}/xsd/cell/crc/pdo_1.1/CRC_PDO_QRY.xsd 
+				     	../${i2b2xmlproject}/xsd/hive/msg_1.1/i2b2_response.xsd  
+				     	../${i2b2xmlproject}/xsd/hive/pdo_1.1/i2b2_PDO.xsd 
+				     	../${i2b2xmlproject}/xsd/cell/crc/psm_1.1/CRC_PSM_QRY_query_definition.xsd 
+				     	../${i2b2xmlproject}/xsd/hive/plugin/drag_drop.xsd 
+				     	../${i2b2xmlproject}/xsd/hive/msg_1.1/i2b2_result_msg.xsd
+				      -b ${XMLFiles}/1.1/i2b2_vdo_bindings.xjb 
+				     	${XMLFiles}/bindings/fileMapper_DataTypes_bindings.xjb 
+				     	${XMLFiles}/1.1/i2b2_pdo_bindings.xjb 
+				     	${XMLFiles}/1.1/i2b2_response_message_bindings.xjb 
+				     	${XMLFiles}/1.1/crc_psm_qry.xjb 
+				     	${XMLFiles}/1.1/i2b2_qry_result.xjb 
+				     	${XMLFiles}/bindings/crc_pdo_qry.xjb 
+				     	${XMLFiles}/bindings/crc_psm_qry_def.xjb 
+				     	${XMLFiles}/1.1/crc_psm_qry_analysis_definition.xjb
+				     	${XMLFiles}/1.1/dragNdrop_bindings.xjb
+				     -d ${gensrc}"/>
+				    
+				 	<jvmarg value="-Djava.endorsed.dirs=../edu.harvard.i2b2.common/lib/jaxb" />
+				     <classpath refid="classpath"/>
+				</java>
+		</target>
 
 
 	<!-- =================================================================== -->
@@ -39,19 +70,20 @@
 	<!-- =================================================================== -->
 	<!-- 								COMMON JAXB GENERATION 				 -->
 	<!-- =================================================================== -->
-	<target name="jaxb_gen" depends="gensrcInit">
-		<!--	 <java dir="." jar="../edu.harvard.i2b2.common/lib/jaxb/jaxb-xjc.jar" fork="true" failonerror="true" >
+	<!--<target name="jaxb_gen" depends="gensrcInit">
+		 <java dir="." jar="../edu.harvard.i2b2.common/lib/jaxb/jaxb-xjc.jar" fork="true" failonerror="true" >
 			     <arg line="-quiet -nv -extension ../JAXBTest/schema/TestClass01.xsd
 			     	 -d ${gensrc}"/>
 			     <jvmarg value="-Djava.endorsed.dirs=../edu.harvard.i2b2.common/lib/jaxb" />
 			     <classpath refid="classpath"/>
 			</java>
 			-->
-		<xjc destdir="${gensrc}">
+	<!--	<xjc destdir="${gensrc}">
 			<schema dir="../JAXBTest/schema" includes="**/*.xsd"/>
 			</xjc>
-	</target>
 	
+	</target>
+	-->
 	<!-- =================================================================== -->
 	<!-- 								ALL 								 -->
 	<!-- =================================================================== -->
